// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styles matches Button dark 1`] = `
.c0 {
  display: inline-block;
  font-weight: 400;
  text-align: center;
  white-space: nowrap;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border: 1px solid transparent;
  padding: 0.375rem 0.75rem;
  font-size: 1rem;
  line-height: 1.5;
  border-radius: 0.25rem;
  -webkit-transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
  transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
  color: #fff;
  background-color: #343a40;
  border-color: #343a40;
  cursor: pointer;
}

.c0:hover,
.c0:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  outline: 0;
  box-shadow: 0 0 0 0.2rem rgba(0,123,255,0.25);
}

.c0:hover {
  color: #fff;
  background-color: #23272b;
  border-color: #1d2124;
}

.c0:focus {
  box-shadow: 0 0 0 0.2rem rgba(52,58,64,0.5);
}

<button
  className="c0 sc-gzVnrw dvUyjS"
/>
`;

exports[`Styles matches Button dark disabled 1`] = `
.c0 {
  display: inline-block;
  font-weight: 400;
  text-align: center;
  white-space: nowrap;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border: 1px solid transparent;
  padding: 0.375rem 0.75rem;
  font-size: 1rem;
  line-height: 1.5;
  border-radius: 0.25rem;
  -webkit-transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
  transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
  color: #fff;
  background-color: #343a40;
  border-color: #343a40;
  opacity: 0.65;
}

.c0:hover,
.c0:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  outline: 0;
  box-shadow: 0 0 0 0.2rem rgba(0,123,255,0.25);
}

.c0:hover {
  color: #fff;
  background-color: #343a40;
  border-color: #343a40;
}

.c0:focus {
  box-shadow: 0 0 0 0.2rem rgba(52,58,64,0.5);
}

<button
  className="c0 sc-gzVnrw dvUyjS"
  disabled={true}
/>
`;
